refactor: padronizar tratamento de excecoes nas classes de servico